...
  final List<String> filters;

  const DealFilterBar({
    super.key,
    required this.selectedFilter,
    required this.onFilterChanged,
    this.filters = const ['All', '2-Person', 'Multi-Person', 'Flash Deal'],
  });

  @override
  Widget build(BuildContext context) {
    return SizedBox(
      height: 44,
...
